--- a/package.json
+++ b/package.json
@@ -59,7 +59,18 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "@emotion/is-prop-valid": "latest",
+    "expo": "latest",
+    "three": "latest",
+    "expo-gl": "latest",
+    "expo-asset": "latest",
+    "react-native": "latest",
+    "expo-file-system": "latest",
+    "@react-three/fiber": "latest",
+    "framer-motion": "latest",
+    "@react-three/drei": "latest",
+    "@emailjs/browser": "latest"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250204.0",
