--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@cloudflare/workers-types": "^4.20250204.0",
     "@opennextjs/cloudflare": "^0.4.5",
     "@types/node": "^20",
+    "@types/three": "^0.173.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
